<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:contentDescription="@string/weather_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/logo"
        android:textAlignment="center"
        android:layout_marginTop="100sp"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="60sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/user_field"
        android:textAlignment="center"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorText"/>

    <Button
        android:id="@+id/main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_field"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/montserrat_black"
        android:textAlignment="center"
        android:layout_marginHorizontal="100sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/main_btn"
        android:textColor="@color/colorBtnText"
        android:textSize="15sp"

         />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_image"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20sp"
        android:fontFamily="@font/montserrat_black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_btn"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/weather_img"
        android:scaleType="center" />


</RelativeLayout>